# just-a-scope

./: .gitignore  Cargo.toml  README.md  Settings.toml  build.rs  config.toml  credentials.toml
.cargo/: config.toml
CAD/: just-a-scope-lid.stl  just-a-scope.blend  just-a-scope.stl
Electronics/: circuitjs.txt  just-a-scope.kicad_pcb  just-a-scope.kicad_prl  just-a-scope.kicad_pro  just-a-scope.kicad_sch
