[package]
name = "just-a-scope"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-alloc = "0.5.0"
esp-hal = { version = "0.22.0", features = ["esp32s3"] }
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
esp-wifi = { version = "0.11.0", features = ["esp32s3", "wifi"] }
critical-section = "1.2.0"
heapless = "0.8.0"
embedded-time = "0.12.1"
embassy-time = "=0.3.2"
embassy-executor = { version = "0.6.3", features = ["task-arena-size-131072"] }
esp-hal-embassy = { version = "0.5.0", features = [
    "esp32s3",
    "integrated-timers",
] }
embedded-io-async = "0.6.1"
embassy-net = { version = "0.5.0", features = [
    "tcp",
    "udp",
    "medium-ethernet",
    "dhcpv4",
] }
edge-http = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05" }
edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05" }
edge-nal = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05" }
embedded-websocket = { version = "0.9.4", default-features = false }
httparse = { version = "1.9.5", default-features = false }
zerocopy = { version = "0.8.13", features = ["derive"] }

[build-dependencies]
toml = "0.8.19"
serde = "1.0.216"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
